# linux-ftools

./: Makefile.am  Makefile.in  NEWS  README  RELEASE  configure  configure.ac  fadvise.c  fallocate.c  fincore.c  linux-ftools.h  showrlimit.c  waste_memory.c
.deps/: fadvise.Po  fallocate.Po  fincore.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  rules
